# nrxn1-sv-analysis

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
config/: default.yaml
notebooks/: 01_getting_started.ipynb
scripts/: aws_batch.py  gcp_pipeline.py  slurm_submit.sh
src/: __init__.py
src/annotation/: __init__.py  annotator.py  databases.py
src/cnv/: __init__.py  consensus.py  detector.py
src/genomics/: __init__.py  regions.py  variants.py
src/ml/: __init__.py  features.py  predictor.py
src/visualization/: __init__.py  dashboard.py  plots.py
tests/: __init__.py  test_cnv.py  test_genomics.py
